--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "4.4"
+    "mongodb": "4.4",
+    "mongoose": "^6.2.7"
   }
 }
